feat: add module product :sparkles:
