# docs/swagger.yaml
@@ -4,7 +4,7 @@ info:
   title: API Backend
   termsOfService: http://swagger.io/terms/
   contact:
-    email: gprando55@gmail.com
+    email: vinicius@utfpr.edu.br
 servers:
 - url: http://localhost:3333
 paths:
@@ -14,6 +14,11 @@ paths:
       description: Criar um novo usuário
       tags:
       - users
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
       responses:
         200:
           description: Sucesso
@@ -21,6 +26,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+
     get:
       summary: Listar usuários
       description: Listar usuários paginado e com filtros
@@ -112,10 +118,25 @@ paths:
               schema:
                 $ref: '#/components/schemas/NotFound'
 
+  /products:
+    post:
+      summary: criar produto
+      tags:
+        - products
+      responses:
+        200:
+          description: Sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+
 
 tags:
   - name: users
     description: Tudo sobre usuários
+  - name: products
+    description: Tudo sobre produtos
 
 components:
   parameters:
